fix header bug on smaller screens

--- a/sass/work/_work.scss
+++ b/sass/work/_work.scss
@@ -14,6 +14,10 @@
     .work {
         &__header-image {
             margin: -150px auto 0;
+            @media only screen and (max-height: 800px) {
+                margin-top: -80px;
+            }
+
             position: relative;
             z-index: 5;
             display: block;
